--- a/codewars_python_solution.ipynb
+++ b/codewars_python_solution.ipynb
@@ -6,7 +6,6 @@
       "name": "Untitled5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJSBNJ6DuKozNYAKBCnRj4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,7 +266,7 @@
         "c = filter_list([1,2,'a','b', '5555'])\n",
         "print(c)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +295,7 @@
         "c = filter_list([1,-2,'a','b', '5555'])\n",
         "print(c)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +344,7 @@
         "  \n",
         "    return True\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,12 +406,164 @@
         "c='abcdefghijklmnopqrs'  \n",
         "is_isogram(c)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "abcdefghijklmnopqrs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NuZdqdfUAFtj"
+      },
+      "source": [
+        "#Write Number in Expanded Form.py\n",
+        "Write Number in Expanded Form\n",
+        "\n",
+        "You will be given a number and you will need to return it as a string in Expanded Form. For example:\n",
+        "\n",
+        "expanded_form(12) # Should return '10 + 2'\n",
+        "expanded_form(42) # Should return '40 + 2'\n",
+        "expanded_form(70304) # Should return '70000 + 300 + 4'\n",
+        "\n",
+        "NOTE: All numbers will be whole numbers greater than 0.\n",
+        "\n",
+        "       def expanded_form(num):\n",
+        "           pass\n",
+        "\n",
+        "1. mengubah variabel num menjadi string\n",
+        "2. menghitung besar dari nilai num\n",
+        "3. mengulang untuk menghitung nilai num\n",
+        "4. jika nilai nilai = 0 maka akan pass"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2mVcE9lyAGMu",
+        "outputId": "4e8cbc54-1778-4ec5-c7e5-2fef606c8380",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def expanded_form(num):\n",
+        "    num = str(num)\n",
+        "    n = 0\n",
+        "    txt =[]\n",
+        "    for i in num :\n",
+        "      n = n + 1\n",
+        "      if i != '0' :\n",
+        "        p = len(num)-n\n",
+        "        txt.append(str(int(i)*(10**p)))\n",
+        "    return ' + '.join(txt)\n",
+        "\n",
+        "print(expanded_form(11))"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 + 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zz-rAdJ2XXKj"
+      },
+      "source": [
+        "There is an array with some numbers. All numbers are equal except for one. Try to find it!\n",
+        "\n",
+        "find_uniq([ 1, 1, 1, 2, 1, 1 ]) == 2\n",
+        "find_uniq([ 0, 0, 0.55, 0, 0 ]) == 0.55\n",
+        "\n",
+        "It’s guaranteed that array contains at least 3 numbers.\n",
+        "\n",
+        "The tests contain some very huge arrays, so think about performance.\n",
+        "\n",
+        "This is the first kata in series:\n",
+        "\n",
+        "\n",
+        "1. memanggil setiap data di array\n",
+        "2. menghitung jumlah data yang dipanggil pada array\n",
+        "3. jika jumlah data == 1 maka akan return ke data yang di panggil"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uXXJGUllXX1W",
+        "outputId": "11934a70-a4f8-4e04-d31b-0367ff282832",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def find_uniq(arr):\n",
+        "    arr.sort(reverse=True)\n",
+        "    for n in arr:\n",
+        "        i = arr.count(n)\n",
+        "        if i == 1:\n",
+        "             return n   # n: unique integer in the array\n",
+        "\n",
+        "print(find_uniq([ 1, 1, 1, 2, 1, 1 ,3]))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MGr98Q5keC5S"
+      },
+      "source": [
+        "Write a function that takes an integer as input, and returns the number of bits that are equal to one in the binary representation of that number. You can guarantee that input is non-negative.\n",
+        "\n",
+        "Example: The binary representation of 1234 is 10011010010, so the function should return 5 in this case\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ctlSQ5yMeCL5",
+        "outputId": "30ee0d77-4355-4cc2-df82-aebc4b02be73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def count_bits(n):\n",
+        "    n = format(n,'b')\n",
+        "    return str(n).count('1')\n",
+        "\n",
+        "print(count_bits(10))"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
           ],
           "name": "stdout"
         }
